# Bedfellows

./: .env.example  .gitignore  MODERNIZATION_PLAN.md  Pipfile  README.md  config.example.ini  groupedbycycle.py  main.py  models.py  overall.py  overall_with_orm.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  superPACs.csv
bedfellows/: __init__.py  cli.py  config.py  database.py  models.py  validation.py
bedfellows/calculators/: __init__.py  base.py  overall.py
bedfellows/exporters/: __init__.py  base.py  csv_exporter.py  datasette_exporter.py  excel_exporter.py  json_exporter.py
bedfellows/fetchers/: __init__.py  base.py  candidates.py  committees.py  contributions.py
examples/: README.md  basic_usage.py  data_pipeline.py
tests/: __init__.py  conftest.py  test_config.py  test_exporters.py  test_fetchers.py  test_models.py  test_validation.py
