[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedfellows"
version = "2.0.0"
description = "Federal Election Commission (FEC) campaign finance relationship analysis tool"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["fec", "campaign-finance", "politics", "data-analysis"]
authors = [
    { name = "Bedfellows Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "peewee>=3.17.0,<4.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "requests>=2.31.0,<3.0.0",
    "click>=8.1.0,<9.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "rich>=13.0.0,<14.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "datasette>=0.64.0,<1.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1.0,<2.0.0",
    "cryptography>=41.0.0,<42.0.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0,<3.0.0",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-requests",
    "types-PyYAML",
]

[project.urls]
Source = "https://github.com/dwillis/Bedfellows"
"Bug Reports" = "https://github.com/dwillis/Bedfellows/issues"

[project.scripts]
bedfellows = "bedfellows.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bedfellows*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
